# Olaf

benchmarking/: create_benchmark_env.sh
benchmarking/agents/: AgentSystem.py  create_agent_system.py  integration_system.json  system_blueprint.json
benchmarking/core/: io_helpers.py  ollama_wrapp.py
benchmarking/prompt_testing/: MultiAgentAutoTester.py  MultiAgentTester.py
benchmarking/rag/: RetrievalAugmentedGeneration.py  embeddings.json  embeddings.jsonl  functions.json
benchmarking/sandbox/: Dockerfile  Singularity
cli/: README.md  create_agent_system.sh  requirements.txt  run_automated.sh  run_interactive.sh
cli/agents/: AgentSystem.py
cli/extra_tools/: InteractiveAgentTester.py  RetrievalAugmentedEmbedder.py  embeddings.jsonl  functions.jsonl
cli/olaf/: README.md  pyproject.toml
cli/olaf/src/olaf/: config.py
cli/olaf/src/olaf/agents/: AgentSystem.py  create_agent_system.py  integration_system.json  olaf.json  system_blueprint.json
cli/olaf/src/olaf/cli/: config_cli.py  create_agent_cli.py  datasets_cli.py  main.py  run_cli.py  utils_cli.py
cli/olaf/src/olaf/core/: io_helpers.py  ollama_wrapper.py  sandbox_management.py
cli/olaf/src/olaf/datasets/: czi_datasets.py
cli/olaf/src/olaf/execution/: runner.py
cli/olaf/src/olaf/rag/: RetrievalAugmentedGeneration.py  UserRAG.py  embeddings.jsonl  functions.jsonl
cli/olaf/src/rag/: RetrievalAugmentedGeneration.py  UserRAG.py  functions.jsonl
cli/prompt_testing/: MultiAgentAutoTester.py  MultiAgentTester.py
cli/rag/: RetrievalAugmentedGeneration.py  UserRAG.py
(+7 files in other folders)
